logs/validate.20260323-162419.log
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
    --> src/Chap43/OrderedTableStEph.rs:1416:29
     |
1416 |             let pair_pred = |p: &Pair<K, V>| -> (keep: bool)
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this closure implements `FnOnce`, not `Fn`
1417 |                 requires f.requires((&p.0, &p.1))
     |                          - closure is `FnOnce` because it moves the variable `f` out of its environment
...
1423 |             let filtered_tree = self.tree.filter(pair_pred, Ghost(pair_spec_pred));
     |                                           ------ --------- the requirement to implement `Fn` derives from here
     |                                           |
     |                                           required by a bound introduced by this call
     |
note: required by a bound in `Chap38::BSTParaStEph::BSTParaStEph::ParamBSTTrait::filter`
    --> src/Chap38/BSTParaStEph.rs:402:22
     |
 402 |         fn filter<F: Fn(&T) -> bool>(
     |                      ^^^^^^^^^^^^^^ required by this bound in `ParamBSTTrait::filter`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0525`.
Elapsed: 15s
